--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <title>Winamax Replayer - PRO FINAL</title>
   <style>
-    body {
-      background: radial-gradient(circle at center, #005c2e 0%, #003f1f 100%);
-      color: #fff;
-      font-family: 'Segoe UI', Arial, sans-serif;
-      text-align: center;
-      padding: 20px;
-    }
-
+    
+body {
+  background: radial-gradient(circle at center, #005c2e 0%, #003f1f 100%);
+  color: #fff;
+  font-family: 'Segoe UI', Arial, sans-serif;
+  text-align: center;
+  padding: 10px;   /* Réduit le padding global */
+}
     #mainCounter {
       font-size: 20px;
       font-weight: bold;
@@ -29,19 +29,19 @@
       padding: 10px;
       font-size: 14px;
     }
-
-    #table {
-      margin-top: 20px;
-      background: #004927;
-      border: 2px solid #111;
-      border-radius: 50% / 30%;
-      padding: 20px;
-      max-width: 1000px;
-      height: 500px;
-      margin-left: auto;
-      margin-right: auto;
-      position: relative;
-    }
+    
+#table {
+  margin-top: 0;    /* Avant : 20px —> maintenant 0 pour remonter */
+  background: #004927;
+  border: 2px solid #111;
+  border-radius: 50% / 30%;
+  padding: 20px;
+  max-width: 1000px;
+  height: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+}
 
     #tableArea {
       position: relative;
@@ -199,7 +199,6 @@
   </style>
 </head>
 <body>
-  <h1>Winamax Poker Replayer PRO</h1>
 
   <textarea id="input" placeholder="Colle ici tes mains Winamax..."></textarea><br>
   <button onclick="parseAllHands()" id="loadButton">Charger les mains</button>
